--- a/package.json
+++ b/package.json
@@ -140,3 +140,10 @@
     ".next/cache"
   ]
 }
+{
+  "name": "my-package",
+  "scripts": {
+    "build": "babel src -d lib",
+    "test": "jest"
+  }
+}
